# robotarm-project

./: .gitignore  InvKin.m  README.md  start_up.txt  working_controller.py
ftk/: CMakeLists.txt  package.xml
ftk/src/: working_camera.py
robogym_arm/: CMakeLists.txt  README.md  package.xml
robogym_arm/launch/: interface.launch  robogym.launch  robot.launch
robogym_arm/msg/: Interface.msg  InterfaceStamped.msg  Robot.msg  RobotStamped.msg
robogym_arm/nodes/: 2019-11-29-14-44-23.bag  example.py  hejhej.py  interface.py  robot.py  self_move_working_controller.py  sim_working_controller.py  test.py  test_pose.py  working_controller.py
